<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.e_conomic.weatherapp.ui.activities.SettingsActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="@dimen/spacing_xlarge">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_id"/>

        <EditText android:id="@+id/settingsCityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_id"
            android:inputType="number"/>

    </LinearLayout>

</FrameLayout>
